[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/spaceship_blue.png" type="Texture" id=2]
[ext_resource path="res://Assets/qubodupFireLoop.ogg" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 10.0

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 4, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
scale = 4.0
scale_random = 1.0
color = Color( 1, 0.501961, 0, 1 )
hue_variation = 0.1
hue_variation_random = 1.0

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 2, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
scale = 2.0
scale_random = 1.0
color = Color( 1, 0.501961, 0, 1 )
hue_variation = 0.1
hue_variation_random = 1.0

[node name="Player" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="ParticleBooster" type="Particles2D" parent="."]
position = Vector2( 0, 20 )
amount = 50
lifetime = 0.5
process_material = SubResource( 3 )

[node name="ParticleBreak1" type="Particles2D" parent="."]
position = Vector2( -20, 10 )
amount = 50
lifetime = 0.5
process_material = SubResource( 2 )

[node name="ParticleBreak2" type="Particles2D" parent="."]
position = Vector2( 20, 10 )
amount = 50
lifetime = 0.5
process_material = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
